--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -3,7 +3,7 @@
 <div class="pattern"></div>
 <div class="container">
     <div class="login-box" id="login-box">
-      <h2>Login</h2>
+      <h2>Craftora Login</h2>
       <h3 class="text-danger"><% msg ? 'msg' : '' %></h3>
       <form action="/user/login" id="loginForm" method="post">
         <div class="user-box">
