corrected the naming mistake of the js file in the user login page.

--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -73,7 +73,7 @@
       </form>
       <p class="or">Or</p>
       <a href="/auth/google" class="btn btn-outline-light" id="google-signUp">
-        <img src="images/user/google_logo.png" style="width:24px; height:24px">Sign Up with Google
+        <img src="/images/user/google_logo.png" style="width:24px; height:24px">Sign Up with Google
       </a>
     </div>
 
@@ -100,5 +100,5 @@
     });
   }
 </script>
-<script src="/JS/user/Functionings.js"></script>
+<script src="/JS/user/functionings.js"></script>
 <script src="/JS/user/validation.js"></script>
